refactor(bootstrap): derive bootstrap from cached app-independent snapshot